--- a/kzg_ewe/Cargo.toml
+++ b/kzg_ewe/Cargo.toml
@@ -15,12 +15,12 @@ ark-ec = "0.4.0"
 ark-ff = "0.4.0"
 ark-bn254 = "0.4.0"
 ark-poly = "0.4.0"
-mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
+mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "7ace0ad" }
+mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "7ace0ad" }
+mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "7ace0ad" }
+mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "7ace0ad" }
+mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "7ace0ad" }
+mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "7ace0ad" }
 tokio = { version = "1.23", features = [
     "net",
     "macros",
@@ -29,6 +29,7 @@ tokio = { version = "1.23", features = [
 ]}
 serio = "0.1" 
 async-trait = "0.1"
+itybity = "0.2"
 
 [patch.crates-io]
 halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
