--- a/kzg_ewe/Cargo.toml
+++ b/kzg_ewe/Cargo.toml
@@ -18,6 +18,8 @@ ark-poly = "0.4.0"
 fancy-garbling = { path = "../../swanky/fancy-garbling" }
 scuttlebutt = { path = "../../swanky/scuttlebutt" }
 ocelot = { path = "../../swanky/ocelot" }
+serde = "1.0.219"
+serde_json = "1.0.140"
 
 [patch.crates-io]
 halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
