--- a/research_we_kzg/Cargo.toml
+++ b/research_we_kzg/Cargo.toml
@@ -14,6 +14,8 @@ ark-serialize = "0.4.2"
 ark-std = "0.4.0"
 rand = "0.8.5"
 blake3 = "1.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
