--- a/kzg_ewe/Cargo.toml
+++ b/kzg_ewe/Cargo.toml
@@ -20,6 +20,7 @@ scuttlebutt = { path = "../../swanky/scuttlebutt" }
 ocelot = { path = "../../swanky/ocelot" }
 serde = "1.0.219"
 serde_json = "1.0.140"
+lazy_static = "1.5.0"
 
 [patch.crates-io]
 halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
