--- a/trinity/Cargo.toml
+++ b/trinity/Cargo.toml
@@ -15,12 +15,15 @@ ark-ec = "0.4.0"
 ark-ff = "0.4.0"
 ark-bn254 = "0.4.0"
 ark-poly = "0.4.0"
-fancy-garbling = { path = "../../swanky/fancy-garbling" }
+fancy-garbling = { path = "../../swanky/fancy-garbling", features = ["serde"] }
 scuttlebutt = { path = "../../swanky/scuttlebutt" }
 ocelot = { path = "../../swanky/ocelot" }
-serde = "1.0.219"
 serde_json = "1.0.140"
 lazy_static = "1.5.0"
+wasm-pack = "0.13.1"
+wasm-bindgen = "0.2.100"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.6"
 
 [patch.crates-io]
 halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
