--- a/trinity/Cargo.toml
+++ b/trinity/Cargo.toml
@@ -15,9 +15,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 rand = { version = "0.8.5", features = ["getrandom"] }
 getrandom = { version = "0.2", features = ["js"] }
-mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz.git", branch = "dev" }
-mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz.git", branch = "dev" }
-mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz.git", branch = "dev" }
+mpz-garble-core = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" }
+mpz-circuits = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" }
+mpz-core = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" }
 itybity = "0.3.1"
 halo2_we_kzg = { path = "../halo2_lot" }
 halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
