--- a/trinity-ts/packages/core/tsconfig.json
+++ b/trinity-ts/packages/core/tsconfig.json
@@ -8,7 +8,8 @@
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "types": ["node"]
+    "types": ["node"],
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"]
 }
