--- a/plain_lot/Cargo.toml
+++ b/plain_lot/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 license = "MIT"
 
 [dependencies]
-ark-bls12-381 = "0.4.0"
-ark-ec = "0.4.2"
-ark-ff = "0.4.2"
-ark-poly = "0.4.2"
+ark-bls12-381 = { version = "0.4.0" }
+ark-ec = { version = "0.4.0" }
+ark-ff = { version = "0.4.0" }
+ark-poly = "0.4.0"
 ark-poly-commit = "0.4.0"
-ark-serialize = "0.4.2"
+ark-serialize = { version = "0.4.0" }
 ark-std = "0.4.0"
 rand = "0.8.5"
 blake3 = "1.5"
