--- a/trinity/Cargo.toml
+++ b/trinity/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 laconic-ot = { path = "../plain_lot" }
 ark-bn254 = "0.4.0"
 ark-poly = "0.4.0"
+ark-serialize = "0.4.0"
 serde_json = "1.0.140"
 wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
