--- a/halo2_lot/Cargo.toml
+++ b/halo2_lot/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 halo2_proofs = { git = "https://github.com/Meyanis95/halo2.git", branch = "main", features = ["derive_serde"] }
 halo2_middleware = { git = "https://github.com/Meyanis95/halo2.git", branch = "main" }
 halo2_backend = { git = "https://github.com/Meyanis95/halo2.git", package = "halo2_backend", branch = "main" }
-halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
+halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main", features = ["derive_serde"] }
 rand = "0.8"
 blake3 = "1.5.5"
 bincode = "1.3.3"
@@ -19,4 +19,4 @@ halo2_backend = { git = "https://github.com/Meyanis95/halo2.git", package = "hal
 halo2_middleware = { git = "https://github.com/Meyanis95/halo2.git", branch = "main" }
 
 [patch.crates-io]
-halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
+halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main", features = ["derive_serde"] }
