--- a/trinity/Cargo.toml
+++ b/trinity/Cargo.toml
@@ -28,5 +28,5 @@ bincode = "1.3.3"
 crate-type = ["cdylib", "rlib"]
 
 [patch.crates-io]
-halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
+halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main", features = ["derive_serde"] }
 
