--- a/trinity-ts/packages/core/package.json
+++ b/trinity-ts/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trinity/core",
+  "name": "@trinity_2pc/core",
   "version": "0.1.0",
   "description": "TypeScript bindings for Trinity 2PC protocol",
   "main": "dist/index.js",
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "src/wasm/*.wasm"
+    "src/wasm/*.wasm",
+    "README.md"
   ],
   "exports": {
     ".": {
