--- a/trinity-ts/packages/app/package.json
+++ b/trinity-ts/packages/app/package.json
@@ -11,7 +11,7 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@trinity/core": "workspace:*",
+    "@trinity_2pc/core": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -26,6 +26,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "wasm-pack": "^0.13.1"
   }
 }
