--- a/trinity-ts/packages/app/package.json
+++ b/trinity-ts/packages/app/package.json
@@ -8,7 +8,7 @@
     "build:core": "pnpm --filter @trinity/core build",
     "build:app": "vite build",
     "build": "pnpm build:wasm && pnpm build:core && pnpm build:app",
-    "dev": "vite"
+    "dev": "vite --force"
   },
   "dependencies": {
     "@trinity_2pc/core": "workspace:*",
