--- a/trinity/Cargo.toml
+++ b/trinity/Cargo.toml
@@ -18,15 +18,23 @@ rand = { version = "0.8.5", features = ["getrandom"] }
 getrandom = { version = "0.2", features = ["js"] }
 mpz-garble-core = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" }
 mpz-circuits = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" , features = ["serde"]}
-mpz-core = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" }
+mpz-core = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser", default-features = false  }
+mpz-common = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser", default-features = false  }
 itybity = "0.3.1"
 halo2_we_kzg = { path = "../halo2_lot" }
 halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
 bincode = "1.3.3"
+console_error_panic_hook = "0.1"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [patch.crates-io]
 halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main", features = ["derive_serde"] }
+yamux = { git = "https://github.com/libp2p/rust-yamux.git", tag = "yamux-v0.13.4" }
 
+[profile.release]
+panic = "abort"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
